# SportLiveAnalyst

./: .env  .env.example  HANDOVER.md  README.md  TASKS.md  pyproject.toml  requirements.txt  results.csv  results2.csv  results_fd.csv  results_fd2.csv  run_worker.bat
.claude/: settings.local.json
docs/: code_structure.md  data_structure.md  run_checklist.md  signal_review_template.txt  v1_preMatch_spec.md
sql/: queries.sql
sql/migrations/: 001_init.sql  002_add_event_to_odds_ms.sql  002_standings.sql  003_add_league_id.sql  004_add_bets_log.sql  005_add_is_early_signal.sql  006_add_prematch_predictions.sql  007_add_lineup_checks.sql  008_add_prematch_columns.sql  010_fixtures_round.sql
src/liveanalyst/: __init__.py  api_football.py  backtest.py  backtest_fd.py  config.py  db.py  domain.py  lineup_worker.py  logic.py  main.py  main_worker.py  prematch.py  prematch_runner.py  prematch_worker.py  replay.py  telegram.py  worker.py
src/liveanalyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api_polling.py  test_data_integrity.py  test_detect_signal.py  test_logic.py
